Prevent invisible text fonts

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,6 +29,7 @@
     url('assets/fonts/Noto_Sans/NotoSans-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -37,6 +38,7 @@
     url('assets/fonts/Noto_Sans/NotoSans-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -45,6 +47,7 @@
     url('assets/fonts/Noto_Sans/NotoSans-Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 // Tag-level
